--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,11 @@
 
 # Byte-compiled / optimized / DLL files
 **/*.py[cod]
+*.pyc
 **/__pycache__/
-
+*/*/*/__pycache__/
+*/*/__pycache__
+*/__pycache__
 # C extensions
 *.so
 
@@ -61,3 +64,5 @@ docs/_build/
 
 # PyBuilder
 target/
+
+
